# django-ninja-aio-crud

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  LICENSE  README.md  TODO.md  add_complex_benchmarks.py  check-performance.sh  extra.css  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  run-comparison.sh  run-local-coverage.sh  run-performance.sh  run-tests.sh  sitemap.xml  versions.json
1.0/: 404.html  index.html  sitemap.xml
2.0/: 404.html  index.html  sitemap.xml
2.10/: 404.html  index.html  sitemap.xml
2.11/: 404.html  index.html  sitemap.xml
2.12/: 404.html  index.html  sitemap.xml
2.13/: 404.html  index.html  sitemap.xml
2.14/: 404.html  index.html  sitemap.xml
2.15/: 404.html  index.html  sitemap.xml
2.16/: 404.html  index.html  sitemap.xml
2.17/: 404.html  extra.css  index.html  sitemap.xml
2.18/: 404.html  extra.css  index.html  sitemap.xml
2.19/: 404.html  index.html  sitemap.xml
2.2/: 404.html  index.html  sitemap.xml
2.20/: 404.html  index.html  sitemap.xml
2.21/: 404.html  index.html  sitemap.xml
2.22/: 404.html  index.html  sitemap.xml
2.23/: 404.html  index.html  sitemap.xml
2.24/: 404.html  extra.css  index.html  sitemap.xml
2.25/: 404.html  index.html  sitemap.xml
2.26/: 404.html  index.html  sitemap.xml
2.27/: 404.html  index.html  sitemap.xml
2.28/: 404.html  index.html  sitemap.xml
2.3/: 404.html  index.html  sitemap.xml
2.30/: 404.html  index.html  sitemap.xml
2.4/: 404.html  index.html  sitemap.xml
2.5/: 404.html  index.html  sitemap.xml
2.6/: 404.html  index.html  objects.inv  sitemap.xml
2.6.1/: 404.html  index.html  sitemap.xml
2.7.0/: 404.html  index.html  sitemap.xml
2.8/: 404.html  index.html  sitemap.xml
2.9/: 404.html  index.html  sitemap.xml
authentication/: index.html
comparison/: comparison_report.html  comparison_results.json  performance_report.html  performance_results.json
contributing/: index.html
dev/: 404.html  extra.css  index.html  sitemap.xml
docs/: auth.md  auth_cookie.md  authentication.md  comparison.md  contributing.md  deployment.md  extra.css  index.md  logging.md  mixins.md  performance.md  release_notes.md  requirements.txt  troubleshooting.md
ninja-aio/: auth.py  models.py  render.py
ninja_aio/: __init__.py  admin.py  api.py  auth.py  decorators.py  decoratos.py  docs.py  exceptions.py  models.py  parsers.py  renders.py  schemas.py  types.py  views.py
overrides/: main.html
pagination/: index.html
performance/: comparison_report.html  comparison_results.json  mkdocs.yml  performance_report.html  performance_results.json
release_notes/: index.html
search/: search_index.json
tests/: __init__.py  test_actions.py  test_admin.py  test_auth.py  test_branding.py  (+6 more)
(+896 files in other folders)
