[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ninja_aio"
dist-name = "django-ninja-aio-crud"
author = "Giuseppe Casillo"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

requires = ["django-ninja >=1.3.0", "joserfc >=1.0.0", "orjson >= 3.10.7"]
description-file = "README.md"
requires-python = ">=3.10"

[tool.flit.metadata.requires-extra]
test = [
    "coverage"
]

[tool.flit.metadata.urls]
Repository = "https://github.com/caspel26/django-ninja-aio-crud"
